# AGVLM

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
configs/ablations/: README.md  rl_grpo_no_clarify_vs_respond.yaml  rl_grpo_no_hallucination_penalty.yaml  rl_grpo_no_management_coverage.yaml  rl_grpo_no_uncertainty_calibration.yaml  sft_freeze_projector_full_l4.yaml  sft_lora_attention_only_full_l4.yaml
configs/benchmarks/: benchmarks.yaml
configs/data/: datasets.yaml  eval_build.yaml  rl_build.yaml  sft_build.yaml  sft_train_eval_llama4.yaml
configs/deepspeed/: zero3_qlora_turin_24g.json
configs/eval/: agmmu.yaml  agrobench.yaml  local_holdout.yaml  local_holdout_full.yaml  mirage_mmmt.yaml  mirage_mmmt_full.yaml  mirage_mmst.yaml  mirage_mmst_full.yaml
configs/model/: llama4_scout_17b_16e_turin_24g.yaml  llama4_scout_17b_16e_turin_24g_lowres.yaml  (+4 more)
docs/: benchmark_plan.md  data_plan.md  decision_log.md  eval_plan.md  experiment_roadmap.md  paper_outline.md  progress_tracker.md  project_overview.md  project_plan.md  research_plan.md  results_artifacts.md  reward_design.md  session_handoff.md  training_monitoring.md  training_plan.md
scripts/: bootstrap_env.sh  launch_torchrun.py  run_smoke_test.sh  verify_environment.py
tests/: test_collators.py  test_data_prep_pipeline.py  test_dataset_schema.py  test_distributed_utils.py  test_evaluation_pipeline.py  test_manifest_builders.py  test_manifest_image_validation.py  test_model_factory.py  test_processor_factory.py  test_reward_functions.py  test_sft_trainer.py  test_smoke_pipeline.py
(+118 files in other folders)
